[add]チェックアウトだけ実行して終了

--- a/.github/workflows/trigger_test.yml
+++ b/.github/workflows/trigger_test.yml
@@ -3,3 +3,11 @@ on:
   push:
   pull_request:
     types: [opened]
+jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    timeout-minutes: 1200
+    steps:
+      - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v1
